Fix datepicker visibility

--- a/src/sass/css/_fa-basket-details.scss
+++ b/src/sass/css/_fa-basket-details.scss
@@ -11,7 +11,6 @@
 
 	.fa-element-wrapper {
 		position: relative;
-		overflow: hidden;
 		margin: 0.5rem 0.6rem;
 
 		.fa-element-label {
